# OpenSSL_Flutter

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  crypto-main.cpp
android/src/main/java/com/codingfeline/opensslflutter/: OpensslFlutterPlugin.java
android/src/main/kotlin/com/codingfeline/opensslflutter/: OpensslFlutterPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/codingfeline/opensslflutterexample/: MainActivity.java
example/android/app/src/main/kotlin/com/codingfeline/opensslflutterexample/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: openssl_flutter.podspec
ios/Classes/: OpensslFlutterPlugin.h  OpensslFlutterPlugin.m  SwiftOpensslFlutterPlugin.swift  shim.h
ios/OpenSSL/module/: module.modulemap
ios/OpenSSL/openssl.framework/Headers/: e_os2.h  umbrella.h
ios/OpenSSL/openssl.framework/Modules/: module.modulemap
lib/: openssl_flutter.dart
lib/src/: message_digest.dart  method_channel.dart  pbkdf2.dart  util.dart
tools/: build_android.sh  build_ios.sh  build_ios_framework.sh  build_openssl.sh  build_openssl_android.sh  openssl_for_ios.plist  openssl_for_ios_umbrella.h
